# shelfdb

./: .gitignore  AGENTS.md  LICENSE  README.md  README.rst  docs.py  mkdocs.yml  package.json  pyproject.toml  require.pip  setup.cfg  setup.py  versions.json
2.0.0/: embedded-mode.md  index.html  objects.inv  security.md  server-mode.md  sitemap.xml
2.0.0/api-reference/: index.html
2.0.0/embedded-mode/: index.html
2.0.0/getting-started/: index.html
2.0.0/protocol/: index.html
2.0.0/query-model/: index.html
2.0.0/search/: search_index.json
2.0.0/security/: index.html
2.0.0/server-mode/: index.html
2.0.0/transactions/: index.html
2.1.0rc1/: benchmark.md  index.html  sitemap.xml
2.1.0rc1/api/: index.html
2.1.0rc1/api/cli/: index.html
2.1.0rc1/api/client/: index.html
2.1.0rc1/api/local/: index.html
2.1.0rc1/benchmark/: index.html
2.1.0rc1/search/: search_index.json
2.1.0rc1/usage/installation/: index.html
2.1.0rc1/usage/local/: index.html
2.1.0rc1/usage/remote/: index.html
2.1.0rc1/usage/server/: index.html
agents/automata/: phase_0_report.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_report.md  phase_5_report.md  phase_6_report.md  progress.md  protocol_poc_architecture_summary.md
agents/planner/: action.md  plan.md  shelfdb_protocol_poc_implementation_plan.md
ai-skill/shelfdb-usage/: SKILL.md
dev/: __init__.py  benchmark.py  cli.py
doc/: Makefile  make.bat
doc/source/: README.rst  conf.py  doc.rst  index.rst
docs/: _base.html  _color.js  _color.js.map  base.css  base.css.map  base.js  base.js.map  index.css  index.html  index.js  index.js.map
docs-src/: _base.html  _color.ts  api-reference.md  async-client.md  base.scss  base.ts  benchmark.md  embedded-mode.md  getting-started.md  index.html  index.html.md  index.md  index.ts  local-api.md  protocol.md  query-model.md  security.md  server-cli.md  server-mode.md  transactions.md
docs-src/_bits-ui/: _media-query.styl  _mixin.styl  _typography.styl  _ui.styl  _var.styl  bits-ui.styl  default.styl  typography.styl  ui-class.styl
docs-src/_component/sidebar/: sidebar.ts
docs-src/_include/: gtag.html
docs-src/api/: cli.md  client.md  index.md  local.md
docs-src/asset/icon/icomoon/: Read Me.txt  demo-external-svg.html  demo.html  selection.json  style.css
docs-src/asset/icon/icomoon/demo-files/: demo.css
docs-src/assets/javascripts/: mermaid-init.js
docs-src/bits-ui/: _require.styl  _var.styl  bits-ui.styl  typography.styl
docs-src/guide/: _base.html  base.ts  guide.html  guide.html.md
docs-src/guide/database/: database.html  database.html.md
docs-src/guide/query/: query.html  query.html.md
docs-src/guide/query/api/: api.html  api.html.md
docs-src/template/: _base.html  base.js  base.styl  index.html  index.md  index.styl
docs-src/template/_include/: github-button.html
docs-src/template/_include/sidebar/: sidebar.html  sidebar.js  sidebar.styl
docs-src/template/guide/: index.html  index.md  index.styl
docs-src/template/guide/database/: index.html  index.md
docs-src/template/guide/query/: api.html  api.md  api.styl  index.html  index.md  index.styl
docs-src/template/guide/server/: index.html  index.md  index.styl
docs-src/template/include/sidebar/: sidebar.html  sidebar.js  sidebar.styl
docs-src/usage/: installation.md  local.md  remote.md  server.md
docs/_component/sidebar/: sidebar.js  sidebar.js.map
docs/_include/sidebar/: sidebar.css  sidebar.html  sidebar.js.map
docs/_static/lib/bits-ui/: normalize.css
docs/asset/icon/icomoon/: demo.html  svgxuse.js  svgxuse.js.map
docs/guide/: base.js  base.js.map  guide.html  index.css  index.html
docs/guide/database/: database.html  index.html
docs/guide/query/: api.css  api.html  index.css  index.html  query.html
docs/guide/query/api/: api.html
docs/guide/server/: index.html
docs/include/sidebar/: sidebar.css  sidebar.html  sidebar.js  sidebar.js.map
docs/static/bits-ui/: bits-ui.css
docs/static/lib/bits-ui/: bits-ui.css  bits-ui.css.map  bits-ui.js  bits-ui.js.map  normalize.css.map
docs/static/lib/bits-ui/icon/: LICENSE
review/: ACTION.md  REVIEW.md
shelfdb/: __init__.py  app.py  db.py  http_api.py  query.py  server.py  shelf.py  test_server.py  test_shelf.py  testing.py
shelfdb/storage/: __init__.py  lmdb.py
src/shelfdb/: __init__.py  _normalize.py  cli.py  client.py  log.py  protocol.py  query.py  rpc.py  server.py  shelf.py  target.py
src/shelfdb/ai_skill/: __init__.py
src/shelfdb/ai_skill/shelfdb-usage/: SKILL.md
src/shelfdb/ai_skill/shelfdb-usage/agents/: openai.yaml
src/shelfdb/ai_skill/shelfdb-usage/references/docs/: benchmark.md  embedded-mode.md  transactions.md
src/shelfdb/client/: __init__.py  _impl.py  client.py
src/shelfdb/protocol/: __init__.py  codec.py  demo_poc.py  payload.py  protocol.py  query.py  query_result.py  rpc.py  schema.py  server.py  session.py  validation.py
src/shelfdb/server/: __init__.py  rpc.py  runtime.py
src/shelfdb/shelf/: __init__.py  core.py  db.py  normalize.py  query.py  shelf_lmdb.py  shelfdb.py  shelfquery.py
src/shelfdb/shelf/shelf/: __init__.py  query.py  schema.py  shelf.py
src/shelfdb/shelf/storage/: __init__.py  lmdb.py
src/shelfdb/storage/: lmdb.py
src/shelfdb/util/: __init__.py  transport.py  validation.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_query_usage.py  test_db_usage.py  test_demo_poc.py  test_dev_benchmark.py  test_dev_cli.py  test_protocol.py  test_server.py  test_session.py  test_shelf.py  test_shelfdb_core.py  test_sync_client.py
tests/shelf/: test_shelf_lmdb.py
worklog/: action.md  plan.md  progress.md
worklog/2026-04-13/: action.md
