[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "shelfdb"
version = "2.1.0.dev0"
description = "A tiny database for Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nitipit Nontasuwan", email = "nitipit@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cyclopts>=4.10.2",
    "dictify>=4.0.0,<4.1",
    "dill>=0.4.0,<0.5",
    "lmdb>=1.7.3,<2",
    "msgpack>=1.1.2,<2",
    "structlog>=25.1.0,<26",
    "uvloop>=0.22.0,<0.23; platform_system == 'Linux'",
]

[project.scripts]
shelfdb = "shelfdb.cli:main"

[dependency-groups]
dev = [
    "dictify>=4.0.0,<4.1",
    "mike>=2.1.3,<3",
    "mkdocs>=1.6.1,<2",
    "mkdocs-shadcn>=0.10.4,<0.11",
    "mkdocstrings[python]>=0.29.0,<0.30",
    "pytest-cov>=7.0.0,<8",
    "pymdown-extensions>=10.16.1,<11",
    "pytest>=9.0.0,<10",
    "ruff>=0.13.0,<0.14",
    "tinydb>=4.8.2,<5",
    "ty>=0.0.1a17,<0.0.2",
]

[tool.uv.build-backend]
module-name = "shelfdb"
module-root = "src"
