[metadata]
name = shelfdb
version = 0.6.8dev
author = Nitipit Nontasuwan
author_email = nitipit@gmail.com
description = Python dict object database with asyncio server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nitipit/shelfdb
keywords = dict, json, database
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = shelfdb
python_requires = >=3.7
install_requires =
    dill >=0.3.3, <0.4.0
    uvloop >= 0.15.0 , < 0.16.0;platform_system=='Linux'

[options.entry_points]
console_scripts =
    shelfdb = shelfdb.server:main